feat: centralize asset management and implement cleanup cron #4
