# internal/entity/puzzle.go
@@ -5,6 +5,8 @@ import "time"
 type Puzzle struct {
 	PuzzleId	string		`db:"puzzle_id"`
 	Judul		string		`db:"judul"`
+	GambarAssetId    *int       `db:"gambar_asset_id"`
+	ThumbnailAssetId *int       `db:"thumbnail_asset_id"`
 	Thumbnail	string		`db:"thumbnail"`
 	Gambar		string		`db:"gambar"`
 	Kategori	string		`db:"kategori"`
